Final form: Mass commit 2